# illama

./: .gitignore  README.md  illama.py  pyproject.toml  requirements.txt  server.py  setup.py  util.py
illama/: __init__.py  illama.py  oai.py  task.py  util.py
tests/: test.py  test_3_1.py
