[project]
name = "illama"
version = "0.1.0"
description = "A fast, lightweight, parallel inference server for Llama LLMs."
authors = [
    {name = "Nick Potafiy", email = "nick@veridia.ai"}
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
dependencies = [
    "openai",
    "tokenizers",
    "uvicorn",
    "fastapi",
    "flash-attn",
    "exllamav2 @ git+https://github.com/turboderp/exllamav2.git@95df994"
]